# kto_tor

./: CMakeLists.txt  bigInt.h  bigInt_fun.cpp  bigInt_ope.cpp  fraction.h  fraction_fun.cpp  fraction_ope.cpp  ktMainWindow.h  ktMainWinow.cpp  ktMainWinowOtherFun.cpp  main.cpp
